@@ -5,6 +5,7 @@ X3 C++ PluginFramework
     * Remove RTTI (not use dynamic_cast).
     * Add XClassMacro.h
     * Remove FileUtility/Plugin.cpp
+    * Add namespace for GetAppWorkPath().
 
 ------v1.0.11------
 
